@@ -72,7 +72,7 @@
 <!ENTITY low-mem-threshold "5&notation-megabytes;">
 
 <!-- version of X11 shipping with the current release -->
-<!ENTITY x11ver "4.3.0">
+<!ENTITY x11ver "6.9">
 
 <!-- an example of adding another image to lilo.conf, cf
      en/post-install.sgml etc. -->
