@@ -269,6 +269,8 @@ removed and text documention at link directs one to a URL that is broken." -->
 
 <!ENTITY url-xfree86-cardlist "&url-xfree86;cardlist.html">
 
+<!ENTITY url-xorg "http://xorg.freedesktop.org/">
+
 <!ENTITY url-simtel "ftp://ftp.simtel.net/pub/simtelnet/msdos/">
 
 
