@@ -153,7 +153,7 @@ to the 3-Button Mouse mini-Howto at
 <filename>/usr/share/doc/HOWTO/en-txt/mini/3-Button-Mouse.gz</filename>,
 <userinput>man gpm</userinput>,
 <filename>/usr/share/doc/gpm/FAQ.gz</filename>, and
-<ulink url="&url-xfree86;current/mouse.html">README.mouse</ulink>.
+<ulink url="&url-xorg;current/doc/html/mouse.html">README.mouse</ulink>.
 
 </para><para arch="powerpc">
 
