@@ -226,15 +226,15 @@ during the installation process described in this document.
 </para><para>
 
 Debian's support for graphical interfaces is determined by the
-underlying support found in XFree86's X11 system.  Most AGP, PCI and
-PCIe video cards work under XFree86.  Details on supported graphics
+underlying support found in X.Org's X11 system.  Most AGP, PCI and
+PCIe video cards work under X.Org.  Details on supported graphics
 buses, cards, monitors, and pointing devices can be found at
-<ulink url="&url-xfree86;"></ulink>.  Debian &release; ships
-with XFree86 version &x11ver;.
+<ulink url="&url-xorg;"></ulink>.  Debian &release; ships
+with X.Org version &x11ver;.
 
 </para><para arch="mips">
 
-The XFree86 X11 window system is only supported on the SGI Indy.  The
+The X.Org X11 window system is only supported on the SGI Indy.  The
 Broadcom BCM91250A evaluation board has standard 3.3v PCI slots and supports
 VGA emulation or Linux framebuffer on a selected range of graphics cards.
 A <ulink url="&url-bcm91250a-hardware;">compatibility listing</ulink> for
@@ -242,7 +242,7 @@ the BCM91250A is available.
 
 </para><para arch="mipsel">
 
-The XFree86 X11 window system is supported on some DECstation models.  The
+The X.Org X11 window system is supported on some DECstation models.  The
 Broadcom BCM91250A evaluation board has standard 3.3v PCI slots and supports
 VGA emulation or Linux framebuffer on a selected range of graphics cards.
 A <ulink url="&url-bcm91250a-hardware;">compatibility listing</ulink> for
