@@ -23,6 +23,7 @@ installation-guide (2006XXXX) UNRELEASED; urgency=low
   [ Colin Watson ]
   * Add a few more supports-floppy-boot and bootable-usb conditionals to
     make it easier to turn all this off in rebuilds of the manual.
+  * Etch uses X.Org 6.9, and xserver-xorg instead of xserver-xfree86.
 
  -- Frans Pop <fjp@debian.org>  Wed,  4 Jan 2006 23:03:45 +0100
 
